# NanoML

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: 01_vector_matrix_basics.cpp  02_linear_regression.cpp  03_logistic_regression.cpp  04_neural_network.cpp  05_csv_data_handling.cpp  06_visualization.cpp
include/nanoml/: activations.hpp  csv.hpp  layer.hpp  linear_regression.hpp  logger.hpp  logistic_regression.hpp  loss.hpp  matrix.hpp  metrics.hpp  model.hpp  neural_network.hpp  optim.hpp  tensor_utils.hpp  validation.hpp  validation.inl  vector.hpp  visualization.hpp
src/: csv.cpp  linear_regression.cpp  logistic_regression.cpp  loss.cpp  matrix.cpp  metrics.cpp  neural_network.cpp  tensor_utils.cpp  vector.cpp
tests/: test_csv.cpp  test_linreg.cpp  test_logreg.cpp  test_loss.cpp  test_matrix.cpp  test_metrics_validation.cpp  test_model_serialization.cpp  test_regularization.cpp  test_vector.cpp
